load sqlite on drag

--- a/src/components/postgres-connect.html
+++ b/src/components/postgres-connect.html
@@ -36,7 +36,7 @@
 </style>
 
 <script>
-	import { remote, ipcRenderer } from 'electron';
+	import { ipcRenderer } from 'electron';
 
 	export default {
 		data() {
