--- a/src/components/sqlite-uploader.html
+++ b/src/components/sqlite-uploader.html
@@ -1,7 +1,6 @@
 <div class="connection-container">
 	<div id="drop-target">
-		<label for="sqlite-upload" class="upload-label"></label>
-		<input id="sqlite-upload" class="upload-input" type="file"/>
+		<input class="upload-input" type="file" use:dragndrop/>
 	</div>
 </div>
 
@@ -12,18 +11,57 @@
 		height 50vh
 		position relative
 		margin-top 21px
+		&.active
+			border 3px solid #000
 		&:after
 			content 'Drag sqlite file...'
 			position absolute
 			top 50%
 			left 50%
 			transform translate(-50%, -50%)
-	label
-		position absolute
-		top 0
-		right 0
-		bottom 0
-		left 0
+			pointer-events none
 	input
 		opacity 0
+		width 100%
+		height 100%
 </style>
+
+<script>
+	import { ipcRenderer } from 'electron';
+
+	export default {
+		actions: {
+			dragndrop(node, text) {
+				function dragover() {
+					node.parentNode.classList.add('active')
+				}
+
+				function dragleave() {
+					node.parentNode.classList.remove('active')
+				}
+
+				function drop(e) {
+					node.parentNode.classList.remove('active')
+					node.parentNode.classList.add('processing')
+					// TODO, maybe some type checking
+					ipcRenderer.send('load-sqlite', this.files[0].path);
+
+				}
+
+				node.addEventListener('dragover', dragover);
+				node.addEventListener('dragleave', dragleave);
+				node.addEventListener('change', drop);
+
+				return {
+					update(text) { },
+
+					destroy() {
+						node.removeEventListener('dragover', dragover);
+						node.removeEventListener('dragleave', dragleave);
+						node.removeEventListener('drop', drop);
+					}
+				}
+			}
+		}
+	}
+</script>
