--- a/src/components/VirtualList.html
+++ b/src/components/VirtualList.html
@@ -1,3 +1,10 @@
+<div class="header-row row">
+	{#if items[0]}
+		{#each Object.keys(items[0].data) as key}
+			<div class="cell header-cell">{key}</div>
+		{/each}
+	{/if}
+</div>
 <div ref:viewport on:scroll='refresh()' style='height: {height};'>
 	<div ref:container style='padding-top: {_top}px; padding-bottom: {_bottom}px;'>
 		{#each visible as item (item.index)}
@@ -20,8 +27,10 @@
 		overflow hidden
 		display table-row
 		&:last-child
-			.cell
+			:global(.cell)
 				border-bottom none
+	.cell
+		display table-cell
 </style>
 
 <script>
