--- a/src/components/Tooltip.html
+++ b/src/components/Tooltip.html
@@ -1,6 +1,6 @@
 <svelte:window on:keydown="set({ key: event.key })" on:keyup="set({ key: ''})"/>
 
-<pre id="tooltip" style="top: {y}px;left:{x}px;display: {overTd && key === 'Alt' ? 'block' : 'none'}"></pre>
+<pre id="tooltip" style="top: {y}px;left:{x}px;display: {overTd && key === 'Alt' ? 'block' : 'none'}"><code></code></pre>
 
 <style type="text/stylus">
   #tooltip
