--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -1,6 +1,8 @@
 <div id="input-container">
 	<div id="help-text" style="display:{helpDisplay}">{helpText}</div>
-	<textarea ref:textarea id="input-textarea" placeholder="SQL query..." bind:value="query" on:keypress="handleKeypress(event)"></textarea>
+	<div id="textarea-container" ref:textarea>
+		<!-- <textarea ref:textarea id="input-textarea" placeholder="SQL query..." bind:value="query" on:keypress="handleKeypress(event)"></textarea> -->
+	</div>
 	<button id="input-button" on:click="onQuery()">Query</button>
 </div>
 
@@ -24,18 +26,13 @@
 		font-size 13px
 		border 1px solid darken(red, 40%)
 
-	textarea
+	#textarea-container
 		width 100%
 		font-size 14px
 		border-radius 5px 5px 0 0
-		padding 5px
-		outline none
-		resize vertical
 		border 2px solid #000
-		font-family 'Andale Mono', courier, monospace
 		margin 0 
-		display block
-		height 75px
+		min-height 75px
 	button
 		width 100%
 		font-size 16px
@@ -73,8 +70,11 @@
 		oncreate () {
 			const { textarea } = this.refs;
 
-			CodeMirror.fromTextArea(textarea, {
-				mode: 'sql'
+			CodeMirror(textarea, {
+				value: 'var x = "hello";\n\n',
+				mode: 'javascript',
+				lineNumbers: true,
+				autofocus: true
 			});
 
 			ipcRenderer.on('query-error', (event, err, errMessage) => {
