--- a/assets/codemirror.css
+++ b/assets/codemirror.css
@@ -344,3 +344,8 @@ div.CodeMirror-dragcursors {
 
 /* Help users use markselection to safely style text background */
 span.CodeMirror-selectedtext { background: none; }
+
+/* placeholder */
+/*.CodeMirror-empty { outline: 1px solid #c22; }*/
+.CodeMirror-empty.CodeMirror-focused { outline: none; }
+.CodeMirror pre.CodeMirror-placeholder { color: #999; }
