--- a/src/components/Tooltip.html
+++ b/src/components/Tooltip.html
@@ -1,17 +1,31 @@
 <svelte:window on:keydown="set({ key: event.key })" on:keyup="set({ key: ''})"/>
 
-<pre id="tooltip" style="top: {y}px;left:{x}px;display: {overTd && key === 'Alt' ? 'block' : 'none'}"><code></code></pre>
+<pre id="tooltip" style="top: {y}px;left:{x}px;display: {showTooltip(overTd, key)}"><code>{ttVal}</code></pre>
 
 <style type="text/stylus">
-  #tooltip
-    position absolute
-    background-color #000
-    font-family 'Andale mono', monospace
-    color #ccc
-    padding 10px
-    border-radius 3px
-    margin-top -25px
-    transform translate(-50%, -100%)
-    pointer-events none
-    z-index 999999
+	#tooltip
+		position absolute
+		background-color #000
+		font-family 'Andale mono', monospace
+		color #ccc
+		padding 10px
+		border-radius 3px
+		margin-top -25px
+		max-width 150px
+		transform translate(-50%, -100%)
+		pointer-events none
+		z-index 999999
 </style>
+
+<script>
+	export default {
+		helpers: {
+			showTooltip (overTd, key) {
+				if (overTd === true && key === 'Meta') {
+					return 'block';
+				}
+				return 'none';
+			}
+		}
+	}
+</script>
