--- a/src/components/Tooltip.html
+++ b/src/components/Tooltip.html
@@ -12,6 +12,8 @@
 		border-radius 3px
 		margin-top -25px
 		max-width 150px
+		max-height 150px
+		overflow-y scroll
 		transform translate(-50%, -100%)
 		pointer-events none
 		z-index 999999
