tooltip overflow tweaks

--- a/src/components/Tooltip.html
+++ b/src/components/Tooltip.html
@@ -9,11 +9,12 @@
 		font-family 'Andale mono', monospace
 		color #ccc
 		padding 10px
+		font-size 16px
+		word-wrap break-word
 		border-radius 3px
 		margin-top -25px
-		max-width 150px
-		max-height 150px
-		overflow-y scroll
+		max-width 250px
+		max-height 250px
 		transform translate(-50%, -100%)
 		pointer-events none
 		z-index 999999
@@ -29,5 +30,5 @@
 				return 'none';
 			}
 		}
-	}
+	};
 </script>
